samples/_failures_safe/1761542201_19272c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7de73d9b.c: In function ‘display_summary’:
./samples/SAFE/__tmp_7de73d9b.c:141:12: error: missing terminating " character
  141 |     printf("ERROR entries
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_7de73d9b.c:141:5: error: expected expression at end of input
  141 |     printf("ERROR entries
      |     ^~~~~~
./samples/SAFE/__tmp_7de73d9b.c:141:5: error: expected declaration or statement at end of input
